# ChangeLog for dev-perl/config-general
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/config-general/ChangeLog,v 1.19 2006/01/15 11:19:34 hansmi Exp $

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  config-general-2.30.ebuild:
  Stable on ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  config-general-2.30.ebuild:
  Marking stable sparc x86

  25 Nov 2005; Tom Gal <tgall@gentoo.org> config-general-2.27.ebuild:
  stable on ppc64

*config-general-2.30 (12 Nov 2005)

  12 Nov 2005; Michael Cummings <mcummings@gentoo.org>
  +config-general-2.30.ebuild:
  Version bump upstream

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org>
  config-general-2.29.ebuild:
  add ~ia64

*config-general-2.29 (17 Jul 2005)

  17 Jul 2005; Michael Cummings <mcummings@gentoo.org>
  +config-general-2.29.ebuild:
  Version bump upstream

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
  config-general-2.27.ebuild:
  Stable on ppc.

  01 May 2005; Tom Martin <slarti@gentoo.org> config-general-2.27.ebuild:
  Stable on amd64.

  30 Apr 2005; Bryan Ãstergaard <kloeri@gentoo.org>
  config-general-2.27.ebuild:
  Stable on alpha.

  28 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  -config-general-2.26.ebuild, config-general-2.27.ebuild:
  Cleaning

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> config-general-2.21.ebuild:
  stable on amd64

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  24 Dec 2004; Yuta SATOH <nigoro@gentoo.org> config-general-2.27.ebuild:
  added ~ppc64

*config-general-2.27 (30 Jul 2004)

  30 Jul 2004; Michael Cummings <mcummings@gentoo.org>
  +config-general-2.27.ebuild:
  New version on CPAN

*config-general-2.26 (05 Jun 2004)

  05 Jun 2004; Michael Cummings <mcummings@gentoo.org>
  config-general-2.26.ebuild:
  new version on cpan

  28 May 2004; Bryan Ãstergaard <kloeri@gentoo.org>
  config-general-2.21.ebuild: