@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/config-general
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/config-general/ChangeLog,v 1.19 2006/01/15 11:19:34 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/config-general/ChangeLog,v 1.20 2006/01/16 15:21:37 mcummings Exp $
+
+*config-general-2.31 (16 Jan 2006)
+
+  16 Jan 2006; Michael Cummings <mcummings@gentoo.org>
+  +config-general-2.31.ebuild:
+  Version bump, bugfixes
 
   15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
   config-general-2.30.ebuild:
